src/objects/Install_Team__c.object
<CustomObject>
    <description>AstrumTIME - Teams of Employees for Installations (either Installers or Electricians).</description>
    <fields>
        <fullName>Number_Of_Projects_Ahead_of_Budget__c</fullName>
        <description>Number of Projects Currently Within Budgeted Hours</description>
        <inlineHelpText>Number of Projects Currently Within Budgeted Hours</inlineHelpText>
        <label>Number Of Projects Ahead of Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Projects_Behind_Budget__c</fullName>
        <description>Number of Projects Currently Beyond Budgeted Hours</description>
        <inlineHelpText>Number of Projects Currently Beyond Budgeted Hours</inlineHelpText>
        <label>Number of Projects Behind Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee Who Leads This Team</description>
        <inlineHelpText>Employee Who Leads This Team</inlineHelpText>
        <label>Team Lead</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Employee__c.Job_Title__c</field>
                <operation>contains</operation>
                <value>Lead</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Install Teams</relationshipLabel>
        <relationshipName>Install_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Office__c</fullName>
        <description>This Team&apos;s Home Office</description>
        <formula>Team_Lead__r.Home_Office_Location__r.City__c + &apos;, &apos; + Team_Lead__r.Home_Office_Location__r.State__c</formula>
        <inlineHelpText>This Team&apos;s Home Office</inlineHelpText>
        <label>Team Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Type__c</fullName>
        <description>Is this an INSTALLER or ELECTRICIAN Team?</description>
        <formula>IF(CONTAINS(TEXT(Team_Lead__r.Job_Title__c), &apos;Installer&apos;),&apos;INSTALLER&apos;,  IF(CONTAINS(TEXT(Team_Lead__r.Job_Title__c), &apos;Electrician&apos;),&apos;ELECTRICIAN&apos;,&apos;OTHER&apos;))</formula>
        <inlineHelpText>Is this an INSTALLER or ELECTRICIAN Team?</inlineHelpText>
        <label>Team Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Hours_Ahead_Behind__c</fullName>
        <description>Total Number of Hours Ahead/Behind on Projects This Quarter</description>
        <inlineHelpText>Total Number of Hours Ahead/Behind on Projects This Quarter</inlineHelpText>
        <label>Total Number of Hours Ahead/Behind</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Install Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Team_Office__c</columns>
        <columns>Team_Lead__c</columns>
        <columns>NAME</columns>
        <columns>Number_Of_Projects_Ahead_of_Budget__c</columns>
        <columns>Number_of_Projects_Behind_Budget__c</columns>
        <columns>Total_Number_of_Hours_Ahead_Behind__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Install Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Team_Lead_Required</fullName>
        <active>false</active>
        <description>A team lead is required for the install team.</description>
        <errorConditionFormula>NOT(CONTAINS(TEXT(Team_Lead__r.Job_Title__c), &apos;Lead&apos;))</errorConditionFormula>
        <errorDisplayField>Team_Lead__c</errorDisplayField>
        <errorMessage>A team lead is required for the install team.</errorMessage>
    </validationRules>
</CustomObject>